--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -1,8 +1,6 @@
-<!-- ****** Welcome Slides Area Start ****** -->
-<section class="welcome_area">
+<!-- <section class="welcome_area">
   <div class="welcome_slides owl-carousel">
-    <!-- Single Slide Start -->
-    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/bg-1.jpg');">
+    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/world-cup1.jpeg');">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
           <div class="col-12">
@@ -16,8 +14,7 @@
       </div>
     </div>
 
-    <!-- Single Slide Start -->
-    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/bg-4.jpg');">
+    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/world-cup1.jpeg');">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
           <div class="col-12">
@@ -31,8 +28,7 @@
       </div>
     </div>
 
-    <!-- Single Slide Start -->
-    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/bg-2.jpg');">
+    <div class="single_slide height-800 bg-img background-overlay" style="background-image: url('../assets/images/bg-img/world-cup2.jpg');">
       <div class="container h-100">
         <div class="row h-100 align-items-center">
           <div class="col-12">
@@ -46,24 +42,23 @@
       </div>
     </div>
   </div>
-</section>
-<!-- ****** Welcome Slides Area End ****** -->
+</section> -->
 
 <!-- ****** Top Catagory Area Start ****** -->
 <section class="top_catagory_area d-md-flex clearfix">
   <!-- Single Catagory -->
-  <div class="single_catagory_area d-flex align-items-center bg-img" style="background-image: url('../assets/images/bg-img/bg-2.jpg');">
+  <div class="single_catagory_area d-flex align-items-center bg-img" style="background-image: url('../assets/images/bg-img/world-cup2.jpg');">
     <div class="catagory-content">
-      <h6>Giày Running</h6>
-      <h2>Khuyến mãi 30%</h2>
-      <a href="#" class="btn karl-btn">Mua Ngay</a>
+      <h6>World cup 2018</h6>
+      <h2>Dự đoán nhận quà</h2>
+      <a href="#" class="btn karl-btn">Chơi ngay</a>
     </div>
   </div>
   <!-- Single Catagory -->
-  <div class="single_catagory_area d-flex align-items-center bg-img" style="background-image: url('../assets/images/bg-img/bg-3.jpg');">
+  <div class="single_catagory_area d-flex align-items-center bg-img" style="background-image: url('../assets/images/bg-img/world-cup1.jpeg');">
     <div class="catagory-content">
-      <h6>Bộ sưu tập giày mùa Hè</h6>
-      <h2>Thiết kế mới</h2>
+      <h6>Bộ sưu tập thể thao</h6>
+      <h2>Russian version</h2>
       <a href="#" class="btn karl-btn">Mua Ngay</a>
     </div>
   </div>
@@ -139,7 +134,7 @@
     </div>
   </div>
 
-  <!-- Adidas Products -->
+  <!-- All Products -->
   <div class="container">
     <div class="row karl-new-arrivals">
       <div *ngFor="let pro of _productArray" class="col-12 col-sm-6 col-md-4 single_gallery_item women wow fadeInUpBig" data-wow-delay="0.2s">
@@ -164,7 +159,7 @@
 
       </div>
     </div>
-    <!-- Adidas Products -->
+    <!-- All Products -->
 
   </div>
 </section>
