--- a/karl-shop/src/app/components/footer/footer.component.css
+++ b/karl-shop/src/app/components/footer/footer.component.css
@@ -4,3 +4,16 @@ footer.footer_area {
 .copywrite_text p {
     color: #ff084e;
 }
+.fa-facebook-f{
+    color: #4267B2;
+}
+
+.fa-pinterest-p{
+    color: #BD081C;
+}
+.fa-twitter{
+    color: #1B95E0;
+}
+.fa-linkedin-in{
+    color: #0077B5;
+}
