--- a/karl-shop/src/app/components/product-detail/product-detail.component.html
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.html
@@ -108,11 +108,11 @@
               </div>
             </div>
             <div class="card">
-              <div class="card-header" role="tab" id="headingTwo">
+              <!-- <div class="card-header" role="tab" id="headingTwo">
                 <h6 class="mb-0">
                   <a class="collapsed" data-toggle="collapse" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">Chi tiết giỏ hàng</a>
                 </h6>
-              </div>
+              </div> -->
               <div id="collapseTwo" class="collapse" role="tabpanel" aria-labelledby="headingTwo" data-parent="#accordion">
                 <div class="card-body">
                   <p>Giỏ hàng của bạn đang trống</p>
