--- a/karl-shop/src/app/components/products/products.component.html
+++ b/karl-shop/src/app/components/products/products.component.html
@@ -1,7 +1,7 @@
 <section class="shop_grid_are section_padding_100">
   <div class="container">
     <div class="row">
-      
+
       <div class="col-12 col-md-4 col-lg-3">
         <side-bar></side-bar>
       </div>
@@ -9,22 +9,32 @@
       <div class="col-12 col-md-8 col-lg-9">
         <div class="shop_grid_product_area">
           <div class="row">
-            <div *ngFor="let pro of _productArray | paginate: { itemsPerPage: 9, currentPage: p }" class="col-12 col-sm-6 col-lg-4 single_gallery_item wow fadeInUpBig"
+
+            <div *ngFor="let pro of _productArray | paginate: { itemsPerPage: 9, currentPage: p }" class="col-12 col-sm-6 col-lg-4 single_gallery_item wow fadeInUpBig card-deck"
               data-wow-delay="0.2s">
-              <div class="product-img" (click)="getDetailModal(pro)">
-                <img src="{{pro.hinhSanPham[0].hinh}}" alt="">
-                <div class="product-quicview">
-                  <a href="#" data-toggle="modal" data-target="#quickview">
-                    <i class="ti-plus"></i>
-                  </a>
+              <div class="card">
+                <div class="product-img" (click)="getDetailModal(pro)">
+                  <img src="{{pro.hinhSanPham[0].hinh}}" alt="">
+                  <div class="product-quicview">
+                    <a href="#" data-toggle="modal" data-target="#quickview">
+                      <i class="ti-plus"></i>
+                    </a>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <div class="product-description">
+                    <h5 class="product-price">{{pro.donGia | number:'1.0'}} đ</h5>
+                    <h4 class="product-sale">{{pro.donGia * (1-pro.chietKhau) | number:'1.0'}} đ</h4>
+                    <p [routerLink]="['/home/detail', pro.id]">{{pro.tenSanPham}}</p>
+                  </div>
+                </div>
+                <div class="sale">
+                  <span>-{{pro.chietKhau * 100 | number: '1.0'}}%</span>
                 </div>
               </div>
-              <div class="product-description">
-                <h5 class="product-price">{{pro.donGia | number:'1.0'}} đ</h5>
-                <h4 class="product-sale">{{pro.donGia * (1-pro.chietKhau) | number:'1.0'}} đ</h4>
-                <p [routerLink]="['/home/detail', pro.id]">{{pro.tenSanPham}}</p>
-              </div>
+              
             </div>
+
           </div>
         </div>
 
@@ -66,56 +76,11 @@
                             <i class="fa fa-star" aria-hidden="true"></i>
                           </div>
                           <h5 class="price">{{_detailArray.donGia | currency :'VNĐ':'code':'1.0'}}
-                            <span>$130</span>
                           </h5>
                           <p>{{_detailArray.chiTiet}}</p>
                           <a [routerLink]="['/home/detail', _detailArray.id]">Xem chi tiết</a>
                         </div>
-                        <!-- Add to Cart Form -->
-                        <form class="cart" method="post">
-                          <div class="quantity">
-                            <span class="qty-minus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty ) &amp;&amp; qty &gt; 1 ) effect.value--;return false;">
-                              <i class="fa fa-minus" aria-hidden="true"></i>
-                            </span>
 
-                            <input type="number" class="qty-text" id="qty" step="1" min="1" max="12" name="quantity" value="1">
-
-                            <span class="qty-plus" onclick="var effect = document.getElementById('qty'); var qty = effect.value; if( !isNaN( qty )) effect.value++;return false;">
-                              <i class="fa fa-plus" aria-hidden="true"></i>
-                            </span>
-                          </div>
-                          <button type="submit" name="addtocart" value="5" class="cart-submit">Thêm vào giỏ hàng</button>
-                          <!-- Wishlist -->
-                          <div class="modal_pro_wishlist">
-                            <a href="wishlist.html" target="_blank">
-                              <i class="ti-heart"></i>
-                            </a>
-                          </div>
-                          <!-- Compare -->
-                          <div class="modal_pro_compare">
-                            <a href="compare.html" target="_blank">
-                              <i class="ti-stats-up"></i>
-                            </a>
-                          </div>
-                        </form>
-
-                        <div class="share_wf mt-30">
-                          <p>Chia sẽ ngay</p>
-                          <div class="_icon">
-                            <a href="#">
-                              <i class="fa fa-facebook" aria-hidden="true"></i>
-                            </a>
-                            <a href="#">
-                              <i class="fa fa-twitter" aria-hidden="true"></i>
-                            </a>
-                            <a href="#">
-                              <i class="fa fa-pinterest" aria-hidden="true"></i>
-                            </a>
-                            <a href="#">
-                              <i class="fa fa-google-plus" aria-hidden="true"></i>
-                            </a>
-                          </div>
-                        </div>
                       </div>
                     </div>
                   </div>
