--- a/karl-shop/src/app/components/side-bar/side-bar.component.html
+++ b/karl-shop/src/app/components/side-bar/side-bar.component.html
@@ -86,23 +86,8 @@
           <h6 class="widget-title mb-30">Lọc theo kích cỡ</h6>
           <div class="widget-desc">
             <ul class="d-flex justify-content-between">
-              <li>
-                <a href="#">XS</a>
-              </li>
-              <li>
-                <a href="#">S</a>
-              </li>
-              <li>
-                <a href="#">M</a>
-              </li>
-              <li>
-                <a href="#">L</a>
-              </li>
-              <li>
-                <a href="#">XL</a>
-              </li>
-              <li>
-                <a href="#">XXL</a>
+              <li *ngFor="let size of _kichThuocArray">
+                <a (click) = "goSize(size.id)">{{ size.tenKichThuoc }}</a>
               </li>
             </ul>
           </div>
