--- a/karl-shop/src/app/components/home/home.component.html
+++ b/karl-shop/src/app/components/home/home.component.html
@@ -85,9 +85,9 @@
               <div class="col-12 col-lg-7">
                 <div class="quickview_pro_des">
                   <h4 class="title">{{_detailArray.tenSanPham}}</h4>
-                  
-                  <h5 class="price">{{_detailArray.donGia | number :'1.0'}} đ
-                  </h5>
+                  <!-- <h5 class="price">{{_detailArray.donGia | number :'1.0'}} đ
+                  </h5> -->
+                  <h4 class="product-sale">{{_detailArray.donGia * (1-_detailArray.chietKhau) | number:'1.0'}} đ</h4>
                   <p>{{_detailArray.chiTiet}}</p>
                   <a [routerLink]="['/home/detail', _detailArray.id]">Xem chi tiết</a>
                 </div>
