--- a/karl-shop/src/app/components/product-detail/product-detail.component.css
+++ b/karl-shop/src/app/components/product-detail/product-detail.component.css
@@ -33,6 +33,5 @@ div#headingOne, div#headingThree {
     background: none;
 }
 div#collapseOne, div#collapseThree {
-    box-sizing: border-box;
-    padding: 15px;
+    margin-left: 15px;
 }
