--- a/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
+++ b/ShoesAdmin/src/app/components/table-hoadon/table-hoadon.component.html
@@ -33,16 +33,16 @@
                                         <td>{{hd.tenNhanVien}}</td>
                                         <td>{{hd.ngay}}</td>
                                         <td>
-                                            <button *ngIf ="hd.trangThai === 'Đang chờ'" type="button" class="btn btn-raised btn-warning btn-min-width mr-1 mb-1" style="width:130px">{{hd.trangThai}}</button>
-                                            <button *ngIf ="hd.trangThai === 'Hủy đơn hàng'" type="button" class="btn btn-raised btn-danger btn-min-width mr-1 mb-1" style="width:130px">{{hd.trangThai}}</button>
-                                            <button *ngIf ="hd.trangThai === 'Hoàn thành'" type="button" class="btn btn-raised btn-success btn-min-width mr-1 mb-1" style="width:130px">{{hd.trangThai}}</button>
+                                            <a *ngIf ="hd.trangThai === 'Đang chờ'"  class="btn white btn-round btn-info" style="width:130px">{{hd.trangThai}}</a>
+                                            <a *ngIf ="hd.trangThai === 'Hủy đơn hàng'" class="btn white btn-round btn-danger" style="width:130px">{{hd.trangThai}}</a>
+                                            <a *ngIf ="hd.trangThai === 'Hoàn thành'"  class="btn white btn-round btn-success" style="width:130px">{{hd.trangThai}}</a>
                                         </td>
-                                        <td>{{hd.tongTien | currency: "VND" : true}}</td>
+                                        <td>{{hd.tongTien | currency}}VND</td>
                                         <td>
-                                            <a class="info p-0" data-original-title="" title="">
-                                                <i class="ft-user font-medium-3 mr-2"></i>
+                                            <a class="info p-0" data-original-title="" title="Chi tiết">
+                                                <i class="ft-list font-medium-3 mr-2"></i>
                                             </a>
-                                            <a class="success p-0" data-original-title="" title="">
+                                            <a class="success p-0" data-original-title="" title="Cập nhật">
                                                 <i class="ft-edit-2 font-medium-3 mr-2"></i>
                                             </a>
                                             <!-- <a class="danger p-0" data-original-title="" title="">
