--- a/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
+++ b/ShoesAdmin/src/app/components/table-khachhang/table-khachhang.component.html
@@ -19,7 +19,7 @@
                     <th>Số điện thoại</th>
                     <th>Địa Chỉ</th>
                     <th>Email</th>
-                    <th>Action</th>
+                    <th>Chức năng</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -30,10 +30,10 @@
                     <td>{{kh.diaChi}}</td>
                     <td>{{kh.email}}</td>
                     <td>
-                      <a class="success p-0" data-original-title="" title="">
+                      <a class="success p-0" data-original-title="" title="Cập nhật">
                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                       </a>
-                      <a class="danger p-0" data-original-title="" title="">
+                      <a class="danger p-0" data-original-title="" title="Xóa">
                         <i class="ft-x font-medium-3 mr-2"></i>
                       </a>
                     </td>
