--- a/ShoesAdmin/src/app/components/table-kho/table-kho.component.html
+++ b/ShoesAdmin/src/app/components/table-kho/table-kho.component.html
@@ -19,7 +19,7 @@
                     <th>No.ID</th>
                     <th>Tên Kho</th>
                     <th>Địa Chỉ</th>
-                    <th>Action</th>
+                    <th>Chức năng</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -35,9 +35,9 @@
                       <a class="success p-0" data-original-title="" title="">
                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                       </a>
-                      <a class="danger p-0" data-original-title="" title="">
+                      <!-- <a class="danger p-0" data-original-title="" title="">
                         <i class="ft-x font-medium-3 mr-2"></i>
-                      </a>
+                      </a> -->
                     </td>
                   </tr>
                 </tbody>
