--- a/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
+++ b/ShoesAdmin/src/app/components/table-nhanvien/table-nhanvien.component.html
@@ -20,7 +20,7 @@
                     <th>Số điện thoại</th>
                     <th>Email</th>
                     <th>Địa chỉ</th>
-                    <th>Action</th>
+                    <th>Chức năng</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -32,10 +32,10 @@
                     <td>{{nv.email}}</td>
                     <td>{{nv.diaChi}}</td>
                     <td>
-                      <a class="success p-0" data-original-title="" title="">
+                      <a class="success p-0" data-original-title="" title="Cập nhật">
                         <i class="ft-edit-2 font-medium-3 mr-2"></i>
                       </a>
-                      <a class="danger p-0" data-original-title="" title="">
+                      <a class="danger p-0" data-original-title="" title="Xóa">
                         <i class="ft-x font-medium-3 mr-2"></i>
                       </a>
                     </td>
