Fix css + Login FB with firebase

--- a/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
+++ b/karl-shop/src/app/components/user-login/user-profile/user-profile.component.html
@@ -1,7 +1,7 @@
 <mat-tab-group>
 
   <mat-tab label="Thông tin tài khoản" class="mattab">
-    <div class="example-container">
+    <div class="example-container" *ngIf="_storeUser != null">
 
       <div class="name">
         <label class="lblName">Họ tên</label>
