--- a/karl-shop/src/app/components/checkout/checkout.component.html
+++ b/karl-shop/src/app/components/checkout/checkout.component.html
@@ -13,23 +13,35 @@
 
           <form action="#" method="post">
             <div class="row">
-              <div class="col-md-6 mb-3">
-                <label for="first_name">Tên
+              <div class="col-md-12 mb-3">
+                <label for="first_name">Họ tên
                   <span>*</span>
                 </label>
-                <input type="text" class="form-control" id="first_name" value="" required>
+                <input type="text" placeholder="Nguyễn Thị Ngọc Trinh" class="form-control" id="first_name" value="" required>
               </div>
-              <div class="col-md-6 mb-3">
-                <label for="last_name">Họ
+
+              <div class="col-12 mb-3">
+                <label for="phone_number">Số điện thoại
                   <span>*</span>
                 </label>
-                <input type="text" class="form-control" id="last_name" value="" required>
+                <input type="number" placeholder="0987 654 321" class="form-control" id="phone_number" min="0" value="">
               </div>
+
               <div class="col-12 mb-3">
-                <label for="company">Tên công ty</label>
-                <input type="text" class="form-control" id="company" value="">
+                <label for="street_address">Địa chỉ
+                  <span>*</span>
+                </label>
+                <input type="text" placeholder="111 Nam Kỳ Khởi Nghĩa" class="form-control mb-3" id="street_address" value="">
+                <!-- <input type="text" class="form-control" id="street_address2" value=""> -->
               </div>
-              <div class="col-12 mb-3">
+
+              <div class="col-12 mb-4">
+                <label for="email_address">Email
+                  <span>*</span>
+                </label>
+                <input type="email" placeholder="ngoctrinhnt@gmail.com" class="form-control" id="email_address" value="">
+              </div>
+              <!-- <div class="col-12 mb-3">
                 <label for="country">Quốc gia
                   <span>*</span>
                 </label>
@@ -43,46 +55,29 @@
                   <option value="bra">Brazil</option>
                   <option value="cana">Canada</option>
                 </select>
-              </div>
-              <div class="col-12 mb-3">
-                <label for="street_address">Địa chỉ
-                  <span>*</span>
-                </label>
-                <input type="text" class="form-control mb-3" id="street_address" value="">
-                <input type="text" class="form-control" id="street_address2" value="">
-              </div>
-              <div class="col-12 mb-3">
+              </div> -->
+
+              <!-- <div class="col-12 mb-3">
                 <label for="postcode">Mã bưu chính
                   <span>*</span>
                 </label>
                 <input type="text" class="form-control" id="postcode" value="">
-              </div>
-              <div class="col-12 mb-3">
+              </div> -->
+              <!-- <div class="col-12 mb-3">
                 <label for="city">Thị trấn/Thành phố
                   <span>*</span>
                 </label>
                 <input type="text" class="form-control" id="city" value="">
-              </div>
-              <div class="col-12 mb-3">
+              </div> -->
+              <!-- <div class="col-12 mb-3">
                 <label for="state">Tỉnh
                   <span>*</span>
                 </label>
                 <input type="text" class="form-control" id="state" value="">
-              </div>
-              <div class="col-12 mb-3">
-                <label for="phone_number">Số điện thoại
-                  <span>*</span>
-                </label>
-                <input type="number" class="form-control" id="phone_number" min="0" value="">
-              </div>
-              <div class="col-12 mb-4">
-                <label for="email_address">Email
-                  <span>*</span>
-                </label>
-                <input type="email" class="form-control" id="email_address" value="">
-              </div>
+              </div> -->
 
-              <div class="col-12">
+
+              <!-- <div class="col-12">
                 <div class="custom-control custom-checkbox d-block mb-2">
                   <input type="checkbox" class="custom-control-input" id="customCheck1">
                   <label class="custom-control-label" for="customCheck1">Điều khoản & chính sách</label>
@@ -95,7 +90,7 @@
                   <input type="checkbox" class="custom-control-input" id="customCheck3">
                   <label class="custom-control-label" for="customCheck3">Đăng ký nhận tin khuyến mãi</label>
                 </div>
-              </div>
+              </div> -->
             </div>
           </form>
         </div>
