--- a/karl-shop/src/app/components/user-login/user-login.component.html
+++ b/karl-shop/src/app/components/user-login/user-login.component.html
@@ -4,10 +4,10 @@
     <div class="example-container">
 
       <div class="button-row">
-        <button mat-raised-button color="primary" (click)="socialSignIn('facebook')">Đăng nhập Facebook
+        <button mat-raised-button color="primary" (click)="signInWithFB()">Đăng nhập Facebook
           <i class="fab fa-facebook-f"></i>
         </button>
-        <button mat-raised-button color="warn" (click)="socialSignIn('google')">Đăng nhập Google
+        <button mat-raised-button color="warn" (click)="signInWithGoogle()">Đăng nhập Google
           <i class="fab fa-google"></i>
         </button>
         
