--- a/karl-shop/src/app/components/checkout/checkout.component.html
+++ b/karl-shop/src/app/components/checkout/checkout.component.html
@@ -8,7 +8,6 @@
 
           <div class="cart-page-heading">
             <h5>Thông tin hóa đơn</h5>
-            <!-- <p>Enter your cupone code</p> -->
           </div>
 
           <form action="#" method="post">
@@ -32,7 +31,6 @@
                   <span>*</span>
                 </label>
                 <input type="text" placeholder="111 Nam Kỳ Khởi Nghĩa" class="form-control mb-3" id="street_address" value="">
-                <!-- <input type="text" class="form-control" id="street_address2" value=""> -->
               </div>
 
               <div class="col-12 mb-4">
@@ -41,56 +39,14 @@
                 </label>
                 <input type="email" placeholder="ngoctrinhnt@gmail.com" class="form-control" id="email_address" value="">
               </div>
-              <!-- <div class="col-12 mb-3">
-                <label for="country">Quốc gia
-                  <span>*</span>
-                </label>
-                <select class="custom-select d-block w-100" id="country">
-                  <option value="usa">United States</option>
-                  <option value="uk">United Kingdom</option>
-                  <option value="ger">Germany</option>
-                  <option value="fra">France</option>
-                  <option value="ind">India</option>
-                  <option value="aus">Australia</option>
-                  <option value="bra">Brazil</option>
-                  <option value="cana">Canada</option>
-                </select>
-              </div> -->
 
-              <!-- <div class="col-12 mb-3">
-                <label for="postcode">Mã bưu chính
+              <div class="col-12 mb-4">
+                <label for="note">Ghi chú
                   <span>*</span>
                 </label>
-                <input type="text" class="form-control" id="postcode" value="">
-              </div> -->
-              <!-- <div class="col-12 mb-3">
-                <label for="city">Thị trấn/Thành phố
-                  <span>*</span>
-                </label>
-                <input type="text" class="form-control" id="city" value="">
-              </div> -->
-              <!-- <div class="col-12 mb-3">
-                <label for="state">Tỉnh
-                  <span>*</span>
-                </label>
-                <input type="text" class="form-control" id="state" value="">
-              </div> -->
+                <textarea type="textarea" name="note" id="note" cols="" rows="10"></textarea>
+              </div>
 
-
-              <!-- <div class="col-12">
-                <div class="custom-control custom-checkbox d-block mb-2">
-                  <input type="checkbox" class="custom-control-input" id="customCheck1">
-                  <label class="custom-control-label" for="customCheck1">Điều khoản & chính sách</label>
-                </div>
-                <div class="custom-control custom-checkbox d-block mb-2">
-                  <input type="checkbox" class="custom-control-input" id="customCheck2">
-                  <label class="custom-control-label" for="customCheck2">Tích điểm nhận quà</label>
-                </div>
-                <div class="custom-control custom-checkbox d-block">
-                  <input type="checkbox" class="custom-control-input" id="customCheck3">
-                  <label class="custom-control-label" for="customCheck3">Đăng ký nhận tin khuyến mãi</label>
-                </div>
-              </div> -->
             </div>
           </form>
         </div>
@@ -101,7 +57,6 @@
 
           <div class="cart-page-heading">
             <h5>Đơn hàng của bạn</h5>
-            <!-- <p>The Details</p> -->
           </div>
 
           <ul class="order-details-form mb-4">
